changes to layout and menu

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimary">#333</color>
     <color name="colorPrimaryDark">#222</color>
     <color name="colorAccent">#999</color>
-    <color name="colorButton">#ddd</color>
+    <color name="colorButton">#ccc</color>
 </resources>
