--- a/app/src/main/res/drawable/green.xml
+++ b/app/src/main/res/drawable/green.xml
@@ -5,6 +5,6 @@
     <size
         android:height="50dp"
         android:width="50dp" />
-    <solid android:color="#0c0" />
+    <solid android:color="#080" />
 
 </shape>
