--- a/app/src/main/res/drawable/white.xml
+++ b/app/src/main/res/drawable/white.xml
@@ -5,6 +5,6 @@
     <size
         android:height="50dp"
         android:width="50dp" />
-    <solid android:color="#fdfdfd" />
+    <solid android:color="#fff" />
 
 </shape>
